--- a/water/index.html
+++ b/water/index.html
@@ -63,14 +63,16 @@
     </section>
     <section class="water-properties">
         <h2>Water properties</h2>
-        <dl>
-            <dt>States</dt>
-            <dd>Liquid phase, solid phase and the gaseous phase</dd>
-            <dt>Density</dt>
-            <dd>Water differs from most liquids in that it becomes less dense as it freezes</dd>
-            <dt>Magnetism</dt>
-            <dd>Water is a diamagnetic material </dd>
-        </dl>
+        <!-- <div> -->
+            <dl>
+                <dt>States</dt>
+                <dd>Liquid phase, solid phase and the gaseous phase</dd>
+                <dt>Density</dt>
+                <dd>Water differs from most liquids in that it becomes less dense as it freezes</dd>
+                <dt>Magnetism</dt>
+                <dd>Water is a diamagnetic material </dd>
+            </dl>
+        <!-- </div> -->
     </section>
 </body>
 </html>
