Made the images appear in a new window when clicked

--- a/bonus-html/images.html
+++ b/bonus-html/images.html
@@ -20,12 +20,12 @@
     <main>
         <section class="gallery">
             <header><h2>Galerry</h2></header>
-            <div class="image"><img src="images/big-carp.jpg"></div>
-            <div class="image"><img src="images/dcf04d-20060922-holdingcarp.jpg"></div>
-            <div class="image"><img src="images/Largemouth-Bass-e1562251404319-1200x900.jpg"></div>
-            <div class="image"><img src="images/thepike1.Jpg"></div>
-            <div class="image"><img src="images/big-carp.jpg"></div>
-            <div class="image"><img src="images/dcf04d-20060922-holdingcarp.jpg"></div>
+            <a href="images/big-carp.jpg" target="_blank" class="image"><img src="images/big-carp.jpg"></a>
+            <a href="images/dcf04d-20060922-holdingcarp.jpg" target="_blank" class="image"><img src="images/dcf04d-20060922-holdingcarp.jpg"></a>
+            <a href="images/Largemouth-Bass-e1562251404319-1200x900.jpg" target="_blank" class="image"><img src="images/Largemouth-Bass-e1562251404319-1200x900.jpg"></a>
+            <a href="images/thepike1.Jpg" target="_blank" class="image"><img src="images/thepike1.Jpg"></a>
+            <a href="images/big-carp.jpg" target="_blank" class="image"><img src="images/big-carp.jpg"></a>
+            <a href="images/dcf04d-20060922-holdingcarp.jpg" target="_blank" class="image"><img src="images/dcf04d-20060922-holdingcarp.jpg"></a>
         </section>
     </main>
 </body>
