--- a/small-web-page-css-l2/index.html
+++ b/small-web-page-css-l2/index.html
@@ -24,7 +24,7 @@
                 <h2>Lexus RN</h2>
                     <p class="content">
                         <img  width="250" height="150" src="images/2016_Lexus_RX_200t_front_view.jpg">
-                        The Lexus RX is a luxury crossover SUV sold since 1998 by Lexus, a luxury division of Toyota. 
+                        The <span class="different-text">Lexus RX</span> is a luxury crossover SUV sold since 1998 by <span class="different-text">Lexus</span>, a luxury division of Toyota. 
                         Originally released in its home market of Japan in late 1997 as the Toyota Harrier, export sales began in March 1998 as the Lexus RX.
                         Considered as the first luxury crossover SUV, four generations of the RX have been 
                         produced to date, the first being compact in size, and the latter three classified
@@ -38,7 +38,7 @@
                 <h2>Lexus RX</h2>
                     <p class="content">
                         <img  width="250" height="150" src="images/2016_Lexus_RX_200t_front_view.jpg">
-                        The Lexus RX is a luxury crossover SUV sold since 1998 by Lexus, a luxury division of Toyota. 
+                        The <span class="different-text">Lexus RX</span> is a luxury crossover SUV sold since 1998 by <span class="different-text">Lexus</span>, a luxury division of Toyota. 
                         Originally released in its home market of Japan in late 1997 as the Toyota Harrier, export sales began in March 1998 as the Lexus RX.
                         Considered as the first luxury crossover SUV, four generations of the RX have been 
                         produced to date, the first being compact in size, and the latter three classified
@@ -52,7 +52,7 @@
                 <h2>Lexus LS</h2>
                     <p class="content">
                         <img  width="250" height="150" src="images/2016_Lexus_RX_200t_front_view.jpg">
-                        The Lexus RX is a luxury crossover SUV sold since 1998 by Lexus, a luxury division of Toyota. 
+                        The <span class="different-text">Lexus RX</span> is a luxury crossover SUV sold since 1998 by <span class="different-text">Lexus</span>, a luxury division of Toyota. 
                         Originally released in its home market of Japan in late 1997 as the Toyota Harrier, export sales began in March 1998 as the Lexus RX.
                         Considered as the first luxury crossover SUV, four generations of the RX have been 
                         produced to date, the first being compact in size, and the latter three classified
@@ -66,7 +66,7 @@
                 <h2>Lexus LFA</h2>
                     <p class="content">
                         <img  width="250" height="150" src="images/2016_Lexus_RX_200t_front_view.jpg">
-                        The Lexus RX is a luxury crossover SUV sold since 1998 by Lexus, a luxury division of Toyota. 
+                        The <span class="different-text">Lexus RX</span> is a luxury crossover SUV sold since 1998 by <span class="different-text">Lexus</span>, a luxury division of Toyota. 
                         Originally released in its home market of Japan in late 1997 as the Toyota Harrier, export sales began in March 1998 as the Lexus RX.
                         Considered as the first luxury crossover SUV, four generations of the RX have been 
                         produced to date, the first being compact in size, and the latter three classified
