--- a/Animated-background-lesson13/index.html
+++ b/Animated-background-lesson13/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body onload="animateFunction()">
+<body>
     <header>
         <nav>
             <ul>
